# Project_ASI

./: .gitignore  Asi_week_1.ipynb  README.md  environment.yml  main.py  week2.ipynb
news-online-popularity/: DBgoogle.py  README.md  pyproject.toml  requirements.txt
news-online-popularity/.viz/: stats.json
news-online-popularity/api/: FastApi.py  usage.md
news-online-popularity/conf/base/: catalog.yml  parameters.yml  parameters_ASI.yml  parameters_ASI_Autogluon.yml  parameters_data_extraction.yml
news-online-popularity/conf/local/: credentials.yml  stats.json
news-online-popularity/interface/: Predictions.py  StreamlitInterface.py
news-online-popularity/interface/pages/: Database_view.py  Settings.py
news-online-popularity/src/news_online_popularity/: Database_connection.py  __init__.py  __main__.py  environment.yml  hooks.py  only_table_creation.sql  settings.py
news-online-popularity/tests/pipelines/ASI/: test_pipeline.py
news-online-popularity/tests/pipelines/ASI_Autogluon/: test_pipeline.py
news-online-popularity/tests/pipelines/data_extraction/: test_pipeline.py
news-online-popularity/wandb/run-20241103_231209-1me7a6t4/: run-1me7a6t4.wandb
news-online-popularity/wandb/run-20241103_231209-1me7a6t4/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
news-online-popularity/wandb/run-20241103_231955-a71uz93l/: run-a71uz93l.wandb
news-online-popularity/wandb/run-20241105_081957-fmxxkv2z/: run-fmxxkv2z.wandb
news-online-popularity/wandb/run-20241105_082543-vl0yfcsr/: run-vl0yfcsr.wandb
src/data_analysis/: data_analysis.py
(+87 files in other folders)
