[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "news_online_popularity"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
news-online-popularity = "news_online_popularity.__main__:main"

[tool.kedro]
package_name = "news_online_popularity"
project_name = "News-online-popularity"
kedro_init_version = "0.19.9"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "news_online_popularity.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "c419f037438343adbc85ee3f6f9550ef"
